--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,16 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <title>4Soft - Juniores desenvolvendo a web como gigantes.</title>
+  <meta charset="utf-8">
 </head>
 <body>
+
+<% if flash[:info] %> 
+  <div class="info">
+    <%= flash[:info] %>
+  </div>
+<% end %>
 
 <%= yield %>
 
