Adicionado janela do jquery ui pra info, adicionado envio de email para o grupo da 4Soft

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -52,7 +52,7 @@
           <div class="span4">
             <label>Mensagem*</label>
             <textarea name="message[body]" required></textarea>
-            <input type="submit" class="button">
+            <input type="submit" class="button" value="Enviar">
           </div>
         </form>
         <!-- CONTACT FORM END -->
