Ajustando alguns textos

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
           <div class="span9">
             <h1>Juniores desenvolvendo a web como gigantes.</h1>
             <p>
-              Nós somos a empresa júnior do curso de Engenharia de Software da UFRN. Desenvolvemos soluções web criativas e eficientes que irão levar seu negócio  a outro patamar. Você pode nos contactar pelo formulário abaixo.
+              A 4Soft é a Empresa Júnior do curso de bacharelado em Engenharia de Software da Universidade Federal do Rio Grande do Norte. Atuando desde 2010 e com experiência no mercado, a empresa possui como meta desenvolver sistemas com qualidade e de uso fácil e intuitivo, visando a satisfação do cliente. Desenvolvemos soluções web criativas e eficientes que irão levar seu negócio  a outro patamar. 
             </p>
           </div>
           <!-- MAIN INFO END -->
